hphp/hack/test/typecheck/reactive/rx_of_scope3.php
<?hh

// ERROR
<<__RxOfScope>>
class A {
  public function f(): void {
  }
}
